[package]
name = "windows-toolchain-builder"
version = "0.1.0"
authors = ["Aleksei Arsenev <alesharik4@gmail.com>"]
edition = "2018"

[dependencies]
archlinux-repo = "0.1.3"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
clap = "2.33.0"
indicatif = "0.15.0"
num_cpus = "1.13.0"
compress-tools = "0.6.0"
regex = "1.3.9"